--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,13 @@ permissions:
   actions: read
 
 jobs:
-  terraform:
+  # <-- CHANGE: This job now only handles the Terraform infrastructure
+  build_and_deploy_infra:
+    name: Build and Deploy Infrastructure
     runs-on: ubuntu-latest
     environment: production
-    # <-- CHANGE: Add an 'outputs' section to pass data to other jobs
     outputs:
+      resource_group_name: ${{ steps.tfout.outputs.resource_group_name }}
       web_app_hostname: ${{ steps.tfout.outputs.web_app_hostname }}
     defaults:
       run:
@@ -55,50 +57,55 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve -input=false tfplan
       
-      # <-- CHANGE: New step to get Terraform outputs after applying
       - name: Get Terraform Outputs
         if: github.ref == 'refs/heads/main'
         id: tfout
         run: |
           echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
           echo "web_app_hostname=$(terraform output -raw web_app_hostname)" >> $GITHUB_OUTPUT
+      
+      # <-- CHANGE: The "Deploy sample index.html" step has been removed from this job.
+
+  # <-- CHANGE: This is a new job to handle the code deployment from a secure location.
+  deploy_app_code:
+    name: Deploy Application Code
+    needs: build_and_deploy_infra
+    if: github.ref == 'refs/heads/main'
+    runs-on: self-hosted # <-- IMPORTANT: Runs on your runner inside the VNet
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      - name: Azure login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy sample index.html to Web App
-        # <-- CHANGE: Updated condition to use the correct step ID and output name
-        if: github.ref == 'refs/heads/main' && steps.tfout.outputs.resource_group_name != '' && steps.tfout.outputs.web_app_hostname != ''
         run: |
-          # <-- CHANGE: Updated variables to use the correct step outputs
-          RESOURCE_GROUP_NAME="${{ steps.tfout.outputs.resource_group_name }}"
-          HOST="${{ steps.tfout.outputs.web_app_hostname }}"
-          APP="${HOST%%.azurewebsites.net}"
-          echo "Packaging ./terraform/www"
-          # Go to the root of the repo to create the zip correctly
-          cd ${{ github.workspace }}
-          zip -r app.zip terraform/www >/dev/null
-          echo "Deploying to app '$APP' in RG '$RESOURCE_GROUP_NAME'"
-          az webapp deployment source config-zip \
+          RESOURCE_GROUP_NAME="${{ needs.build_and_deploy_infra.outputs.resource_group_name }}"
+          HOST="${{ needs.build_and_deploy_infra.outputs.web_app_hostname }}"
+          APP_NAME="${HOST%%.azurewebsites.net}"
+
+          echo "Packaging application for deployment..."
+          zip -r app.zip ./terraform/www -j >/dev/null
+
+          echo "Deploying to app '$APP_NAME' in RG '$RESOURCE_GROUP_NAME'"
+          # <-- CHANGE: Using the modern, recommended 'az webapp deploy' command
+          az webapp deploy \
             --resource-group "$RESOURCE_GROUP_NAME" \
-            --name "$APP" \
-            --src app.zip
-      
-      # Note: Saving state as an artifact is fine, but not needed for the 'positive-test' job with these changes.
+            --name "$APP_NAME" \
+            --src-path app.zip \
+            --type zip
 
   positive-test:
     name: Positive test (inside VNet should be 200)
-    needs: terraform
-    # This job will only run if the repository variable 'ENABLE_POSITIVE_TEST' is set to 'true'
-    if: github.ref == 'refs/heads/main' && needs.terraform.outputs.web_app_hostname != '' && vars.ENABLE_POSITIVE_TEST == 'true'
-    runs-on: self-hosted # your runner placed inside the VNet
-    defaults:
-      run:
-        shell: bash
-
+    needs: [build_and_deploy_infra, deploy_app_code] # <-- Depends on both previous jobs
+    if: github.ref == 'refs/heads/main' && vars.ENABLE_POSITIVE_TEST == 'true'
+    runs-on: self-hosted
+    
     steps:
-      # Note: Checkout and Azure Login are not strictly required for this test anymore,
-      # but are good practice to keep if you add more steps later.
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: Azure login
         uses: azure/login@v1
         with:
@@ -106,19 +113,21 @@ jobs:
 
       - name: Curl Web App from inside VNet
         run: |
-          # <-- CHANGE: Get hostname directly from the previous job's output
-          HOST="${{ needs.terraform.outputs.web_app_hostname }}"
+          HOST="${{ needs.build_and_deploy_infra.outputs.web_app_hostname }}"
           
           if [ -z "$HOST" ]; then
             echo "::error ::web_app_hostname output not received from terraform job"; exit 1
           fi
           
+          # Add a small delay to allow the app to restart after deployment
+          echo "Waiting 30 seconds for the app to be ready..."
+          sleep 30
+
           URL="https://${HOST}"
           echo "Testing from inside VNet: $URL"
           
-          # Allow the curl command to fail without stopping the script
           set +e
-          CODE=$(curl -s -o /dev/null -w "%{http_code}" "$URL")
+          CODE=$(curl --insecure -s -o /dev/null -w "%{http_code}" "$URL")
           set -e
           
           echo "HTTP response: $CODE"
