--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Terraform Deploy
 on:
   push:
     branches: [ "main" ]
-    paths:          # Only trigger when relevant paths change
+    # Only trigger when relevant paths change
+    paths:
       - 'terraform/**'
       - 'app/**'
       - 'www/**'
@@ -61,7 +62,7 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve -input=false tfplan
-      
+
       - name: Get Terraform Outputs
         if: github.ref == 'refs/heads/main'
         id: tfout
@@ -71,15 +72,21 @@ jobs:
           echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
           echo "web_app_name=$(terraform output -raw web_app_name)" >> $GITHUB_OUTPUT
 
-      # NEW: Publish tfstate for rollback/destroy workflow
+      # Debug & publish state for rollback/destroy workflow
+      - name: Verify state files exist (debug)
+        run: |
+          ls -la
+          ls -la terraform
+          test -s terraform/terraform.tfstate
+
       - name: Upload tfstate (for rollback)
         if: always() && github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
           name: tfstate-main
           path: |
-            ./terraform.tfstate
-            ./.terraform.lock.hcl
+            terraform/terraform.tfstate
+            terraform/.terraform.lock.hcl
           if-no-files-found: error
           retention-days: 30
 
@@ -89,11 +96,11 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment: production
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Azure login
         uses: azure/login@v1
         with:
@@ -106,15 +113,15 @@ jobs:
         run: |
           ACR_SERVER=${{ needs.build_and_deploy_infra.outputs.acr_login_server }}
           IMAGE_NAME="secureapp"
-          
+
           docker build -t $IMAGE_NAME -f terraform/app/Dockerfile terraform
-          
+
           docker tag $IMAGE_NAME $ACR_SERVER/$IMAGE_NAME:${{ github.sha }}
           docker tag $IMAGE_NAME $ACR_SERVER/$IMAGE_NAME:latest
-          
+
           docker push $ACR_SERVER/$IMAGE_NAME:${{ github.sha }}
           docker push $ACR_SERVER/$IMAGE_NAME:latest
-      
+
       - name: Restart Web App to pull latest image
         run: |
           az webapp restart \
