--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,13 +72,13 @@ jobs:
           echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
           echo "web_app_name=$(terraform output -raw web_app_name)" >> $GITHUB_OUTPUT
 
-      # Debug & publish state for rollback/destroy workflow
+      # ✅ FIXED: we are already in terraform/, so check current dir
       - name: Verify state files exist (debug)
         run: |
           ls -la
-          ls -la terraform
-          test -s terraform/terraform.tfstate
+          test -s terraform.tfstate
 
+      # Publish tfstate for rollback/destroy workflow (paths are repo-root relative)
       - name: Upload tfstate (for rollback)
         if: always() && github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
