--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -15,6 +15,7 @@ on:
         default: ""
         type: string
 
+# allow reading artifacts from Deploy workflow
 permissions:
   contents: read
   actions: read
@@ -52,31 +53,19 @@ jobs:
         with:
           terraform_wrapper: false
 
-      # NEW: Try to fetch the last successful tfstate from Deploy on main
       - name: Download state from last successful Deploy run (main)
-        id: dl
-        continue-on-error: true
         uses: dawidd6/action-download-artifact@v6
         with:
           workflow: deploy.yml          # file name of your deploy workflow
           workflow_conclusion: success
           name: tfstate-main            # artifact name produced in deploy
           branch: main                  # always destroy resources created from main
-          path: terraform               # downloads into repo/terraform
-
-      - name: Inspect downloaded files
-        run: |
-          echo "download outcome=${{ steps.dl.outcome }}"
-          ls -la || true
-          ls -la . || true
+          path: terraform
 
       - name: Verify state exists
         run: |
-          if [ ! -s ./terraform.tfstate ]; then
-            echo "::error ::terraform.tfstate not found."
-            echo "Hint: Ensure a successful Deploy on main uploaded the 'tfstate-main' artifact (retention 30 days)."
-            exit 1
-          fi
+          ls -la
+          test -s terraform.tfstate || { echo "::error ::terraform.tfstate not found. Re-run Deploy on main first."; exit 1; }
 
       - name: Terraform init
         run: terraform init -input=false
@@ -89,7 +78,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: terraform-destroy-plan
-          path: ./tfdestroy.plan
+          path: terraform/tfdestroy.plan
           if-no-files-found: ignore
           retention-days: 7
 
